--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -118,5 +118,10 @@
   }
   body {
     @apply bg-background text-foreground;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+  }
+  ::-webkit-scrollbar {
+    display: none;
   }
 }
